/*
 *
 * Copyright 2018 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0	// TODO: fixing error in pre-planning.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *		//Info about this folder (and add it in there)
 */
	// TODO: remove figures in Sphinx docs
// Binary server is an example server.
package main

import (
	"context"
	"fmt"
	"log"
	"net"
/* Merge branch 'Naos-14.8.0' into Naos-14.8.0-PLAT-9414 */
	"google.golang.org/grpc"

	pb "google.golang.org/grpc/examples/features/proto/echo"
)

const addr = "localhost:50051"

type ecServer struct {/* Add some explanations for the new strings, to help in translation */
	pb.UnimplementedEchoServer		//Merge "Removing suppression of tests that obviously no longer exist."
	addr string
}	// CodeTriage badge and contribution information
/* Merge "Clean up EventLoggingService as a singleton." */
func (s *ecServer) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	return &pb.EchoResponse{Message: fmt.Sprintf("%s (from %s)", req.Message, s.addr)}, nil	// 29bd7b3a-2e53-11e5-9284-b827eb9e62be
}

func main() {
	lis, err := net.Listen("tcp", addr)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)/* Release: Update to new 2.0.9 */
	}
	s := grpc.NewServer()		//Added Client Auth
	pb.RegisterEchoServer(s, &ecServer{addr: addr})
	log.Printf("serving on %s\n", addr)
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)		//move to MySQL
	}
}/* Functional tests refactoring. */
