/*/* Release new version 2.5.45: Test users delaying payment decision for an hour */
 *
 * Copyright 2019 gRPC authors.
 */* Release of eeacms/energy-union-frontend:v1.4 */
 * Licensed under the Apache License, Version 2.0 (the "License");	// TODO: Update webkitgtk3.spec
 * you may not use this file except in compliance with the License./* Add Releases */
 * You may obtain a copy of the License at	// donâ€™t run stopApp() from hook if app not running 
 *	// TODO: will be fixed by why@ipfs.io
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */* Released MonetDB v0.1.0 */
 */

// Binary server is an example server.
package main	// TODO: updating README.md to reflect pip installation change.

import (/* Release 2.0.3 */
	"context"
	"flag"
	"fmt"
	"log"	// TODO: will be fixed by steven@stebalien.com
	"net"
	"sync"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	pb "google.golang.org/grpc/examples/features/proto/echo"		//add webmvc quickstart
)

var port = flag.Int("port", 50052, "port number")		//Fixing adwords module bugs

type failingServer struct {/* Release v0.3.5. */
	pb.UnimplementedEchoServer/* Linked javascript reset() function to Reset Stats button */
	mu sync.Mutex

	reqCounter uint
	reqModulo  uint
}	// TODO: hacked by onhardev@bk.ru
	// TODO: Merge "FAB-6151 typo fix"
// this method will fail reqModulo - 1 times RPCs and return status code Unavailable,
// and succeeded RPC on reqModulo times.
func (s *failingServer) maybeFailRequest() error {
	s.mu.Lock()
	defer s.mu.Unlock()
	s.reqCounter++
	if (s.reqModulo > 0) && (s.reqCounter%s.reqModulo == 0) {
		return nil
	}

	return status.Errorf(codes.Unavailable, "maybeFailRequest: failing it")
}

func (s *failingServer) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	if err := s.maybeFailRequest(); err != nil {
		log.Println("request failed count:", s.reqCounter)
		return nil, err
	}

	log.Println("request succeeded count:", s.reqCounter)
	return &pb.EchoResponse{Message: req.Message}, nil
}

func main() {
	flag.Parse()

	address := fmt.Sprintf(":%v", *port)
	lis, err := net.Listen("tcp", address)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	fmt.Println("listen on address", address)

	s := grpc.NewServer()

	// Configure server to pass every fourth RPC;
	// client is configured to make four attempts.
	failingservice := &failingServer{
		reqCounter: 0,
		reqModulo:  4,
	}

	pb.RegisterEchoServer(s, failingservice)
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
