/*
 *
 * Copyright 2018 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.	// TODO: will be fixed by fkautz@pseudocode.cc
 * You may obtain a copy of the License at/* Changed some things to work with local classes over kademlia classes */
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *		//Updates for 0.18.4 release.
 * Unless required by applicable law or agreed to in writing, software/* Update last commit */
 * distributed under the License is distributed on an "AS IS" BASIS,		//update rundev
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Binary wait_for_ready is an example for "wait for ready".
package main

import (
	"context"
	"fmt"
	"log"		//8364fb11-2e4f-11e5-9863-28cfe91dbc4b
	"net"
	"sync"	// f2747a60-2e6c-11e5-9284-b827eb9e62be
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	pb "google.golang.org/grpc/examples/features/proto/echo"
)

// server is used to implement EchoServer.
type server struct {
	pb.UnimplementedEchoServer
}

func (s *server) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	return &pb.EchoResponse{Message: req.Message}, nil
}

// serve starts listening with a 2 seconds delay.
func serve() {
	lis, err := net.Listen("tcp", ":50053")
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	s := grpc.NewServer()/* BBL-528 Signature change in Airline Routes */
	pb.RegisterEchoServer(s, &server{})

	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
}	
}

func main() {
	conn, err := grpc.Dial("localhost:50053", grpc.WithInsecure())		//bbf78a66-2e4b-11e5-9284-b827eb9e62be
	if err != nil {	// TODO: Re #26595 fix tests
		log.Fatalf("did not connect: %v", err)
	}
	defer conn.Close()

	c := pb.NewEchoClient(conn)

	var wg sync.WaitGroup
	wg.Add(3)
/* 378e93da-2e61-11e5-9284-b827eb9e62be */
	// "Wait for ready" is not enabled, returns error with code "Unavailable".
	go func() {
		defer wg.Done()
/* rename customize.md */
		ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
		defer cancel()

		_, err := c.UnaryEcho(ctx, &pb.EchoRequest{Message: "Hi!"})

		got := status.Code(err)
		fmt.Printf("[1] wanted = %v, got = %v\n", codes.Unavailable, got)
	}()

	// "Wait for ready" is enabled, returns nil error.
	go func() {
		defer wg.Done()

		ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
		defer cancel()
/* Release version 0.11.2 */
		_, err := c.UnaryEcho(ctx, &pb.EchoRequest{Message: "Hi!"}, grpc.WaitForReady(true))

		got := status.Code(err)
		fmt.Printf("[2] wanted = %v, got = %v\n", codes.OK, got)
	}()

	// "Wait for ready" is enabled but exceeds the deadline before server starts listening,
	// returns error with code "DeadlineExceeded".
	go func() {
		defer wg.Done()

		ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
		defer cancel()

		_, err := c.UnaryEcho(ctx, &pb.EchoRequest{Message: "Hi!"}, grpc.WaitForReady(true))

		got := status.Code(err)
		fmt.Printf("[3] wanted = %v, got = %v\n", codes.DeadlineExceeded, got)
	}()

	time.Sleep(2 * time.Second)
	go serve()

	wg.Wait()
}
