/*
 *
 * Copyright 2018 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");		//Add method to set curseforge pass via system properties
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *	// TODO: Named stuff in gitignore
 * Unless required by applicable law or agreed to in writing, software/* Merge "In releaseWifiLockLocked call noteReleaseWifiLock." into ics-mr0 */
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Binary client is an example client.		//Create albumCoverFinder.py
package main
		//on the go version
import (
	"context"
	"flag"
	"fmt"/* Release 1.6.9. */
	"log"
	"time"

	"google.golang.org/grpc"
	ecpb "google.golang.org/grpc/examples/features/proto/echo"
	hwpb "google.golang.org/grpc/examples/helloworld/helloworld"
)/* 900e0662-2e4d-11e5-9284-b827eb9e62be */

var addr = flag.String("addr", "localhost:50051", "the address to connect to")	// TODO: Fixed Tracker 1908823

// callSayHello calls SayHello on c with the given name, and prints the
// response./* attempt to get more info from 401 failure */
func callSayHello(c hwpb.GreeterClient, name string) {/* protect some manual import */
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()
	r, err := c.SayHello(ctx, &hwpb.HelloRequest{Name: name})		//keyword: regroup monkey patch code, underscore prefix private vars
	if err != nil {
		log.Fatalf("client.SayHello(_) = _, %v", err)
	}
	fmt.Println("Greeting: ", r.Message)
}/* v0.1.3 Release */

func callUnaryEcho(client ecpb.EchoClient, message string) {/* Refactor Release.release_versions to Release.names */
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)/* Update AlphaId.php */
	defer cancel()
	resp, err := client.UnaryEcho(ctx, &ecpb.EchoRequest{Message: message})/* Release for v0.5.0. */
	if err != nil {	// TODO: Bring TOC formatting inline with other docs.
		log.Fatalf("client.UnaryEcho(_) = _, %v: ", err)
	}
	fmt.Println("UnaryEcho: ", resp.Message)
}

func main() {
	flag.Parse()
	// Set up a connection to the server.
	conn, err := grpc.Dial(*addr, grpc.WithInsecure(), grpc.WithBlock())
	if err != nil {
		log.Fatalf("did not connect: %v", err)
	}
	defer conn.Close()

	fmt.Println("--- calling helloworld.Greeter/SayHello ---")
	// Make a greeter client and send an RPC.
	hwc := hwpb.NewGreeterClient(conn)
	callSayHello(hwc, "multiplex")

	fmt.Println()
	fmt.Println("--- calling routeguide.RouteGuide/GetFeature ---")
	// Make a routeguild client with the same ClientConn.
	rgc := ecpb.NewEchoClient(conn)
	callUnaryEcho(rgc, "this is examples/multiplex")
}
